[package]
name = "matmul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6.1"
log = "0.4.17"
nalgebra ="0.31.4"
rustfft = "6.1.0"
ndarray="0.15.6"
ndarray-ndimage= "0.3.0"
[profile.dev]
opt-level = 3